# python_edu

./: EXT.MD  README.md
core/autotests/: class10_1.py  class7.py  class9_0.py  class9_1.py  class9_10.py  class9_11.py  class9_2.py  class9_3.py  class9_4.py  class9_5.py  class9_6.py  class9_7.py  class9_8.py  class9_9.py  t1.py  test11_11.py  test12_05.py  test12_06.py  test12_7.py  test12_9.py  test5_7.py  test6_12.py  test6_12_try.py  test6_13.py  test7_10.py  test7_11.py  test7_15.py  test7_16.py  test7_17.py  test7_5.py  test7_7.py  test7_8.py  test7_9.py  test8_1.py  test8_10.py  test8_2.py  test8_5.py  test8_6.py  test8_7.py  test8_8.py  (+5 more)
core/homeworks/: README.md
homework_11/: entities.py
homework_12/: .gitignore  bot.py  entities.py  exceptions.py  generators.py  main.py  utils.py
homework_12/phone_book/: .gitignore  setup.py
homework_12/phone_book_bot/: setup.py
homework_7/clean_folder/: setup.py
homework_8/: main.py
homework_9/: main.py
web/class_1/: AbstractFactory.py  Command.py  Observer.py  Proxy.py
web/class_2/: python_types.py
web/class_2/code_black_poetry/: pyproject.toml
web/class_2/test_poetry/: pyproject.toml
web/class_5/: async_util.py  class_01_process_pool_executor.py  class_01_thread_pool_executor.py  class_02_aiohttp.py  class_04_client.py  ex01_simple_asyncio.py  ex02_gather.py  ex03.py  ex04_simple_task.py  ex05_io_bound.py  ex06_get_path.py
web/class_6/: .gitignore  class_01.py
web/class_7/: async_engine.py  core.py  create.py  delete.py  new_models.py  new_select_join.py  read.py  rel_one_to_many.py  update.py
(+227 files in other folders)
