[tool.poetry]
name = "test-poetry"
version = "0.1.0"
description = ""
authors = ["Nazar Salo <peakodev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiosqlite = "^0.19.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
